# shell-core

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  mycelium.toml  rust-toolchain.toml
.githooks/: pre-push
.github/workflows/: ci.yml
scripts/: gen-latest-json.sh  install-app.sh  release.sh  tooling.env.example
src/: compositing.rs  detach.html  detach.rs  home.html  home.rs  lib.rs  menu.rs  mouse_nav.rs  progress_bar.rs  tabs.rs  watch.rs
src/inject/: mouse-nav.js
tests/: scripts.rs
