[package]
name = "shell-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared Tauri app-shell + release-tooling layer for the curator, warden, and lector apps."
repository = "https://github.com/Lockyc/shell-core"
publish = false

# The default feature set is ZERO-dependency on purpose: `build_stamp()` and the embedded release
# scripts (RELEASE_SH/GEN_LATEST_SH/INSTALL_APP_SH) are all a consuming app's `build.rs` needs, and
# a build-dependency must stay light. The Tauri runtime helper (`register_plugins`) lives behind the
# `runtime` feature so it only pulls tauri when used as a normal `[dependencies]` entry. With
# resolver = "2", a consumer's `[build-dependencies]` (default-features = false) and `[dependencies]`
# (features = ["runtime"]) resolve features independently, so the build-dep never drags in tauri.
[features]
default = []
runtime = [
    "dep:tauri",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-process",
    "dep:tauri-plugin-window-state",
]

[dependencies]
# "unstable" is required for WindowBuilder / WebviewBuilder::new / Window::add_child — the home
# surface (src/home.rs) builds its window the same way curator's build_error_window does (a raw
# Window + an add_child webview), which needs it. Every consumer already carries this feature on
# its own tauri dependency (for that same reason), so it costs nothing new downstream.
tauri = { version = "2", features = ["unstable"], optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
tauri-plugin-window-state = { version = "2", optional = true }
