[package]
name = "shell-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared Tauri app-shell + release-tooling layer for the curator, warden, and lector apps."
repository = "https://github.com/Lockyc/shell-core"
publish = false

# The default feature set is ZERO-dependency on purpose: `build_stamp()` and the embedded release
# scripts (RELEASE_SH/GEN_LATEST_SH/INSTALL_APP_SH) are all a consuming app's `build.rs` needs, and
# a build-dependency must stay light. The Tauri runtime helper (`register_plugins`) lives behind the
# `runtime` feature so it only pulls tauri when used as a normal `[dependencies]` entry. With
# resolver = "2", a consumer's `[build-dependencies]` (default-features = false) and `[dependencies]`
# (features = ["runtime"]) resolve features independently, so the build-dep never drags in tauri.
[features]
default = []
runtime = [
    "dep:tauri",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-process",
    "dep:tauri-plugin-window-state",
    "dep:notify",
]

[dependencies]
# "unstable" is required for `Manager::get_window` — the home surface (src/home.rs) uses it to find
# an already-open home window in `show_home`/`close_home`. It is NOT needed for the window's
# construction: that went through `WebviewWindowBuilder` (stable) once the bare
# `WindowBuilder` + `add_child` shape was removed for being broken on macOS 26 — see `close_home`'s
# doc. Every consumer already carries this feature on its own tauri dependency (their content panes
# do `add_child` a webview per tab), so it costs nothing new downstream.
#
# "macos-private-api" is required for `WebviewWindowBuilder::transparent` (src/detach.rs's
# `open_detached` — the detached window's shell composites over a hole exactly like every app's own
# content windows). Cargo feature unification would cover this for free when shell-core is only
# ever built *inside* a consumer (every app already carries the feature on its own tauri
# dependency, per the note above) — but shell-core must also build and gate-check standalone (`just
# gate` here, `cargo build -p shell-core --features runtime`), with no consumer's Cargo.toml around
# to unify features from, so it has to request it itself.
tauri = { version = "2", features = ["unstable", "macos-private-api"], optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
tauri-plugin-window-state = { version = "2", optional = true }
# The shared config-file hot-reload watcher (src/watch.rs), consumed by curator + lector. Same
# major as their own pin so cargo unifies to one `notify` across each app's dependency graph.
notify = { version = "6", optional = true }

[dev-dependencies]
# The watch.rs hot-reload test writes a temp config dir and waits for the callback to fire.
tempfile = "3"
